-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 7.0.21, 8.0.10, 8.1.1
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2025-06-09
-
🟩 Routing and Topology
-
None
-
None
-
None
-
None
-
None
-
None
If a getMore operation fails before setting the originating command in the CurOp, the originating command will not be printed in the Slow query log, making debugging the error difficult.
It's likely to fail a getMore operation during the locks acquisition, which is done before setting the originating command.
- duplicates
-
SERVER-104984 The log notifying a QueryPlanKilled due to a range deletion should include the originating command
-
- Closed
-