SERVER-105879 The originatingCommand is missing in getMore 'Slow query' log upon error (#36867)

GitOrigin-RevId: 2924d27e78cdf3e9fffb656c315b0721399f0ea0